--- a/AMR17S2/.project
+++ b/AMR17S2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>AMR17S2</name>
+	<name>AMR17S2(draft)</name>
 	<comment></comment>
 	<projects>
 	</projects>
